# PlayerLite

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  README.md  aa-preview.html  gradle.properties  settings.gradle.kts
.github/workflows/: android-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
build-logic/: build.gradle.kts
cache-core/: build.gradle.kts
cache-core/src/main/cpp/: CMakeLists.txt  cache_core_jni.cpp
cache-core/src/main/cpp/core/: cache_clear.cpp  cache_control.cpp  cache_control.h  cache_lookup.cpp  cache_memory_budget.cpp  cache_metadata_codec.cpp  cache_provider_bridge.cpp  cache_provider_bridge.h  cache_read_pipeline.cpp  cache_ring_buffer.cpp  cache_ring_buffer.h  cache_runtime.cpp  cache_runtime.h  cache_runtime_lifecycle.cpp  cache_runtime_session.cpp  cache_storage_files.cpp  cache_task_loop.cpp  cache_task_loop.h  cache_trunk_index.cpp  cache_trunk_index.h  cache_types.h  cache_virtual_file.cpp  cache_virtual_file.h
cache-core/src/main/cpp/jni/: cache_core_jni_clear.cpp  cache_core_jni_lifecycle.cpp  cache_core_jni_provider_stream.cpp  cache_core_jni_query.cpp  cache_core_jni_session.cpp  cache_core_jni_shared.cpp  cache_core_jni_shared.h
core-data/: build.gradle.kts
design-system/: build.gradle.kts
docs/mockups/: homepage-style-options.html
docs/plans/: 2026-03-01-native-cache-framework-design.md  2026-03-01-native-cache-framework-implementation.md  2026-03-03-cache-core-restart-design.md  2026-03-03-cache-core-restart-implementation.md  2026-03-14-user-center-local-audio-entry.md  2026-03-15-player-followup-bugfixes.md  2026-03-25-project-structure-refactor.md
docs/superpowers/specs/: 2026-04-18-player-type-longterm-closures-design.md
feature-album-detail/: build.gradle.kts
feature-artist-detail/: build.gradle.kts
feature-detail-support/: build.gradle.kts
feature-details/: build.gradle.kts
feature-discovery/: build.gradle.kts
feature-home/: build.gradle.kts
feature-player/: build.gradle.kts
feature-playlist-detail/: build.gradle.kts
feature-search/: build.gradle.kts
feature-song-detail/: build.gradle.kts
feature-song-detail/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
network-core/: build.gradle.kts
openspec/changes/add-audio-effects/: design.md  (+1 more)
playback-api/: build.gradle.kts
playback-client/: build.gradle.kts
playback-contract/: build.gradle.kts
playback-orchestrator/: build.gradle.kts
playback-service/: build.gradle.kts
player/: build.gradle.kts
player/src/main/cpp/: CMakeLists.txt  ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_player.cpp  ffmpeg_player.h  i_native_player.h  i_play_source.h  jni_play_source.cpp  jni_play_source.h  player.cpp
playlist-core/: build.gradle.kts
scripts/: build_ffmpeg_android.sh  range_http_server.py
user/: build.gradle.kts
(+914 files in other folders)
